--- a/backend/astrology/templates/astrology/partials/section_blog.html
+++ b/backend/astrology/templates/astrology/partials/section_blog.html
@@ -55,8 +55,8 @@
                         {{ post.created_at|date:"d M Y" }}
                     </div>
 
-                    <h3 style="color:var(--text); font-size:1.2rem; margin-bottom:10px; line-height:1.4">{{ post.title
-                        }}</h3>
+                    <h3 style="color:var(--text); font-size:1.2rem; margin-bottom:10px; line-height:1.4">{{ post.title }}</h3>
+                        
 
 
                     <div
